--- a/SnowLeopardWallpapers.json
+++ b/SnowLeopardWallpapers.json
@@ -3,8 +3,8 @@
  
 "json_popup_wait" : "Please wait for loading data ...",
   
-"mode_no_ads" : true,
-"mode_tes_iklan_fan_admob_startapp_appdodeal" : true,
+"mode_no_ads" : false,
+"mode_tes_iklan_fan_admob_startapp_appdodeal" : false,
 
 // Mode Iklan
 // 
@@ -16,9 +16,9 @@
 //  Mode APPLOVIN    Applovin  backup Unity Backup Startapp
 //  Iklan native hanya bisa admob fan appodel
 
-"pengaturan_iklan_banner" : "APPLOVIN",
-"pengaturan_iklan_inter" : "APPLOVIN",
-"pengaturan_iklan_native" : "",
+"pengaturan_iklan_banner" : "ADMOB",
+"pengaturan_iklan_inter" : "ADMOB",
+"pengaturan_iklan_native" : "ADMOB",
 
 "inter_count" : 3,
 
@@ -32,9 +32,9 @@
 
 "startapp" : "205309105",
 
-"admob_banner" : "",
-"admob_inter" : "",
-"admob_native" : "",
+"admob_banner" : "ca-app-pub-8703788307276427/1159855654",
+"admob_inter" : "ca-app-pub-8703788307276427/9014294943",
+"admob_native" : "ca-app-pub-8703788307276427/8846773983",
 
 "hpk_alien" : "Donate Car to Charity California",
 "hpkadmob1" : "Mesothelioma Law",
