--- a/SnowcrossExtremeActionWallpaper.json
+++ b/SnowcrossExtremeActionWallpaper.json
@@ -33,8 +33,8 @@
 "startapp" : "206954344",
 
 "admob_banner" : "ca-app-pub-8703788307276427/5867417114",
-"admob_inter" : "ca-app-pub-8703788307276427/6866294700",
-"admob_native" : "ca-app-pub-8703788307276427/2368646494",
+"admob_inter" : "ca-app-pub-8703788307276427/6866294700x",
+"admob_native" : "ca-app-pub-8703788307276427/2368646494x",
 
 "hpk_alien" : "Donate Car to Charity California",
 "hpkadmob1" : "Mesothelioma Law",
@@ -51,7 +51,7 @@
 
 "unity_banner_id" : "Banner_Android",
 "unity_inters_id" : "Interstitial_Android",
-"unity_id" : 4220281,
+"unity_id" : ,
 "unity_test" : false,
 
 "applovin_banner_id" : "TGx1teODRw6FkviIwt7NUZxQMlR_QTavpVxg9JvbE_szvTGqPNBvy6JIsmIHJuA6O5oTPg8eg-caWtOxEZqBg8",
