--- a/SnowLeopardWallpapers.json
+++ b/SnowLeopardWallpapers.json
@@ -16,11 +16,11 @@
 //  Mode APPLOVIN    Applovin  backup Unity Backup Startapp
 //  Iklan native hanya bisa admob fan appodel
 
-"pengaturan_iklan_banner" : "ADMOB",
-"pengaturan_iklan_inter" : "ADMOB",
-"pengaturan_iklan_native" : "ADMOB",
+"pengaturan_iklan_banner" : "APPLOVIN",
+"pengaturan_iklan_inter" : "APPLOVIN",
+"pengaturan_iklan_native" : "APPLOVIN",
 
-"inter_count" : 3,
+"inter_count" : 2,
 
 "enable_strap" : true,
 "enable_strap_Splah" : true,
@@ -32,7 +32,7 @@
 
 "startapp" : "205309105",
 
-"admob_banner" : "ca-app-pub-8703788307276427/1159855654",
+"admob_banner" : "ca-app-pub-8703788307276427/1159855654x",
 "admob_inter" : "ca-app-pub-8703788307276427/9014294943x",
 "admob_native" : "ca-app-pub-8703788307276427/8846773983x",
 
@@ -54,8 +54,8 @@
 "unity_id" : 1234567,
 "unity_test" : false,
 
-"applovin_banner_id" : "TGx1teODRw6FkviIwt7NUZxQMlR_QTavpVxg9JvbE_szvTGqPNBvy6JIsmIHJuA6O5oTPg8eg-caWtOxEZqBg8",
-"applovin_inters_id" : "TGx1teODRw6FkviIwt7NUZxQMlR_QTavpVxg9JvbE_szvTGqPNBvy6JIsmIHJuA6O5oTPg8eg-caWtOxEZqBg8",
+"applovin_banner_id" : "ad7b0488e6cf17ae",
+"applovin_inters_id" : "1acf195832ffafea",
 
 "Button_Rating" : "Rate App",
 "Button_Share" : "Share",
