--- a/SnowfallHDWallpapers-RYSAV6.4.json
+++ b/SnowfallHDWallpapers-RYSAV6.4.json
@@ -3,9 +3,9 @@
     {
       "select_main_ads": "APPLOVIN-M",
       "select_backup_ads":"ADMOB",
-      "main_ads_banner": "6659c702c71ce02bx",
-      "main_ads_intertitial":"4e2b9c2a488fc537x",
-      "main_native_ads_Admob_or_applovin":"4e2b9c2a488fc537x",
+      "main_ads_banner": "6659c702c71ce02b",
+      "main_ads_intertitial":"4e2b9c2a488fc537",
+      "main_native_ads_Admob_or_applovin":"4e2b9c2a488fc537",
       "backup_native_ads_Admob_or_applovin":"1234567",
       "backup_ads_banner":"1234567",
       "backup_ads_intertitial":"1234567",
