--- a/SnowLeopardWallpapers-RYSAV6.4.json
+++ b/SnowLeopardWallpapers-RYSAV6.4.json
@@ -3,9 +3,9 @@
     {
       "select_main_ads": "APPLOVIN-M",
       "select_backup_ads":"ADMOB",
-      "main_ads_banner": "ad7b0488e6cf17aex",
-      "main_ads_intertitial":"1acf195832ffafeax",
-      "main_native_ads_Admob_or_applovin":"55cac02ac714726fx",
+      "main_ads_banner": "ad7b0488e6cf17ae",
+      "main_ads_intertitial":"1acf195832ffafea",
+      "main_native_ads_Admob_or_applovin":"55cac02ac714726f",
       "backup_native_ads_Admob_or_applovin":"1234567",
       "backup_ads_banner":"1234567",
       "backup_ads_intertitial":"1234567",
