--- a/BeautifulSnowfallWallpapers-RYSAV6.4.json
+++ b/BeautifulSnowfallWallpapers-RYSAV6.4.json
@@ -3,9 +3,9 @@
     {
       "select_main_ads": "APPLOVIN-M",
       "select_backup_ads":"ADMOB",
-      "main_ads_banner": "9d5fc01aaa9fad7dx",
-      "main_ads_intertitial":"d5ac8588e8348d12x",
-      "main_native_ads_Admob_or_applovin":"adeb9c5745bf888fx",
+      "main_ads_banner": "9d5fc01aaa9fad7d",
+      "main_ads_intertitial":"d5ac8588e8348d12",
+      "main_native_ads_Admob_or_applovin":"adeb9c5745bf888f",
       "backup_native_ads_Admob_or_applovin":"12345678",
       "backup_ads_banner":"12345678",
       "backup_ads_intertitial":"12345678",
