--- a/SnowmobileRaceWallpapers-RYSAV6.4.json
+++ b/SnowmobileRaceWallpapers-RYSAV6.4.json
@@ -3,9 +3,9 @@
     {
       "select_main_ads": "APPLOVIN-M",
       "select_backup_ads":"ADMOB",
-      "main_ads_banner": "e25b1784e780750ex",
-      "main_ads_intertitial":"a70e2d6e6e3f2d4cx",
-      "main_native_ads_Admob_or_applovin":"37df4f29e9ca2523x",
+      "main_ads_banner": "e25b1784e780750e",
+      "main_ads_intertitial":"a70e2d6e6e3f2d4c",
+      "main_native_ads_Admob_or_applovin":"37df4f29e9ca2523",
       "backup_native_ads_Admob_or_applovin":"12345678",
       "backup_ads_banner":"12345678",
       "backup_ads_intertitial":"12345678",
