--- a/SnowcrossExtremeActionWallpaper.json
+++ b/SnowcrossExtremeActionWallpaper.json
@@ -17,8 +17,8 @@
 //  Iklan native hanya bisa admob fan appodel
 
 "pengaturan_iklan_banner" : "APPLOVIN",
-"pengaturan_iklan_inter" : "APPLOVIN",
-"pengaturan_iklan_native" : "APPLOVIN",
+"pengaturan_iklan_inter" : "ADMOB",
+"pengaturan_iklan_native" : "ADMOB",
 
 "inter_count" : 2,
 
@@ -33,8 +33,8 @@
 "startapp" : "206954344",
 
 "admob_banner" : "ca-app-pub-8703788307276427/5867417114x",
-"admob_inter" : "ca-app-pub-8703788307276427/6866294700x",
-"admob_native" : "ca-app-pub-8703788307276427/2368646494x",
+"admob_inter" : "ca-app-pub-8703788307276427/6866294700",
+"admob_native" : "ca-app-pub-8703788307276427/2368646494",
 
 "hpk_alien" : "Donate Car to Charity California",
 "hpkadmob1" : "Mesothelioma Law",
@@ -55,7 +55,7 @@
 "unity_test" : false,
 
 "applovin_banner_id" : "b297896a8e6146a2",
-"applovin_inters_id" : "88c2def53908ebec",
+"applovin_inters_id" : "88c2def53908ebecx",
 
 "Button_Rating" : "Rate App",
 "Button_Share" : "Share",
