--- a/StunningSnowmobileRaceWallpaper.json
+++ b/StunningSnowmobileRaceWallpaper.json
@@ -17,8 +17,8 @@
 //  Iklan native hanya bisa admob fan appodel
 
 "pengaturan_iklan_banner" : "APPLOVIN",
-"pengaturan_iklan_inter" : "APPLOVIN",
-"pengaturan_iklan_native" : "APPLOVIN",
+"pengaturan_iklan_inter" : "ADMOB",
+"pengaturan_iklan_native" : "ADMOB",
 
 "inter_count" : 2,
 
@@ -33,8 +33,8 @@
 "startapp" : "206874208",
 
 "admob_banner" : "ca-app-pub-8703788307276427/3957060337x",
-"admob_inter" : "ca-app-pub-8703788307276427/8798323474x",
-"admob_native" : "ca-app-pub-8703788307276427/7237829796x",
+"admob_inter" : "ca-app-pub-8703788307276427/8798323474",
+"admob_native" : "ca-app-pub-8703788307276427/7237829796",
 
 "hpk_alien" : "Donate Car to Charity California",
 "hpkadmob1" : "Mesothelioma Law",
@@ -55,7 +55,7 @@
 "unity_test" : false,
 
 "applovin_banner_id" : "c9979f8c590e71a0",
-"applovin_inters_id" : "d0b56c44410b00c8",
+"applovin_inters_id" : "d0b56c44410b00c8x",
 
 "Button_Rating" : "Rate App",
 "Button_Share" : "Share",
