--- a/SnowmobileRaceWallpapers-RYSAV6.4.json
+++ b/SnowmobileRaceWallpapers-RYSAV6.4.json
@@ -1,17 +1,17 @@
 {
   "Ads": [
     {
-      "select_main_ads": "APPLOVIN-M",
-      "select_backup_ads":"ADMOB",
-      "main_ads_banner": "e25b1784e780750e",
-      "main_ads_intertitial":"a70e2d6e6e3f2d4c",
-      "main_native_ads_Admob_or_applovin":"37df4f29e9ca2523",
-      "backup_native_ads_Admob_or_applovin":"12345678",
-      "backup_ads_banner":"12345678",
-      "backup_ads_intertitial":"12345678",
+      "select_main_ads": "ADMOB",
+      "select_backup_ads":"APPLOVIN-M",
+      "main_ads_banner": "ca-app-pub-8703788307276427/4552305757x",
+      "main_ads_intertitial":"ca-app-pub-8703788307276427/3239224086",
+      "main_native_ads_Admob_or_applovin":"ca-app-pub-8703788307276427/4742386755",
+      "backup_native_ads_Admob_or_applovin":"37df4f29e9ca2523x",
+      "backup_ads_banner":"e25b1784e780750e",
+      "backup_ads_intertitial":"a70e2d6e6e3f2d4cx",
       "interval_intertitial": 3,
-      "initialize_sdk":"",
-      "initialize_sdk_backup_ads":"",
+      "initialize_sdk":"12345678",
+      "initialize_sdk_backup_ads":"12345678",
       "high_paying_keyword_1": "",
       "high_paying_keyword_2": "",
       "high_paying_keyword_3": "",
