--- a/BeautifulSnowfallWallpapers-RYSAV6.4.json
+++ b/BeautifulSnowfallWallpapers-RYSAV6.4.json
@@ -1,17 +1,17 @@
 {
   "Ads": [
     {
-      "select_main_ads": "APPLOVIN-M",
-      "select_backup_ads":"ADMOB",
-      "main_ads_banner": "9d5fc01aaa9fad7d",
-      "main_ads_intertitial":"d5ac8588e8348d12",
-      "main_native_ads_Admob_or_applovin":"adeb9c5745bf888f",
-      "backup_native_ads_Admob_or_applovin":"12345678",
-      "backup_ads_banner":"12345678",
-      "backup_ads_intertitial":"12345678",
+      "select_main_ads": "ADMOB",
+      "select_backup_ads":"APPLOVIN-M",
+      "main_ads_banner": "ca-app-pub-8703788307276427/6871864256x",
+      "main_ads_intertitial":"ca-app-pub-8703788307276427/5290672357",
+      "main_native_ads_Admob_or_applovin":"ca-app-pub-8703788307276427/3706127944",
+      "backup_native_ads_Admob_or_applovin":"adeb9c5745bf888fx",
+      "backup_ads_banner":"9d5fc01aaa9fad7d",
+      "backup_ads_intertitial":"d5ac8588e8348d12x",
       "interval_intertitial": 3,
-      "initialize_sdk":"",
-      "initialize_sdk_backup_ads":"",
+      "initialize_sdk":"12345678",
+      "initialize_sdk_backup_ads":"12345678",
       "high_paying_keyword_1": "",
       "high_paying_keyword_2": "",
       "high_paying_keyword_3": "",
