--- a/SnowfallHDWallpapers-RYSAV6.4.json
+++ b/SnowfallHDWallpapers-RYSAV6.4.json
@@ -1,17 +1,17 @@
 {
   "Ads": [
     {
-      "select_main_ads": "APPLOVIN-M",
-      "select_backup_ads":"ADMOB",
-      "main_ads_banner": "6659c702c71ce02b",
-      "main_ads_intertitial":"4e2b9c2a488fc537",
-      "main_native_ads_Admob_or_applovin":"4e2b9c2a488fc537",
-      "backup_native_ads_Admob_or_applovin":"1234567",
-      "backup_ads_banner":"1234567",
-      "backup_ads_intertitial":"1234567",
+      "select_main_ads": "ADMOB",
+      "select_backup_ads":"APPLOVIN-M",
+      "main_ads_banner": "ca-app-pub-8703788307276427/6495942816x",
+      "main_ads_intertitial":"ca-app-pub-8703788307276427/5182861145",
+      "main_native_ads_Admob_or_applovin":"ca-app-pub-8703788307276427/2406005639",
+      "backup_native_ads_Admob_or_applovin":"4e2b9c2a488fc537x",
+      "backup_ads_banner":"6659c702c71ce02b",
+      "backup_ads_intertitial":"4e2b9c2a488fc537x",
       "interval_intertitial": 3,
-      "initialize_sdk":"",
-      "initialize_sdk_backup_ads":"",
+      "initialize_sdk":"12345678",
+      "initialize_sdk_backup_ads":"12345678",
       "high_paying_keyword_1": "",
       "high_paying_keyword_2": "",
       "high_paying_keyword_3": "",
