--- a/SnowLeopardWallpapers-RYSAV6.4.json
+++ b/SnowLeopardWallpapers-RYSAV6.4.json
@@ -1,17 +1,17 @@
 {
   "Ads": [
     {
-      "select_main_ads": "APPLOVIN-M",
-      "select_backup_ads":"ADMOB",
-      "main_ads_banner": "ad7b0488e6cf17ae",
-      "main_ads_intertitial":"1acf195832ffafea",
-      "main_native_ads_Admob_or_applovin":"55cac02ac714726f",
-      "backup_native_ads_Admob_or_applovin":"1234567",
-      "backup_ads_banner":"1234567",
-      "backup_ads_intertitial":"1234567",
+      "select_main_ads": "ADMOB",
+      "select_backup_ads":"APPLOVIN-M",
+      "main_ads_banner": "ca-app-pub-8703788307276427/1159855654x",
+      "main_ads_intertitial":"ca-app-pub-8703788307276427/9014294943",
+      "main_native_ads_Admob_or_applovin":"ca-app-pub-8703788307276427/8846773983",
+      "backup_native_ads_Admob_or_applovin":"55cac02ac714726fx",
+      "backup_ads_banner":"ad7b0488e6cf17ae",
+      "backup_ads_intertitial":"1acf195832ffafeax",
       "interval_intertitial": 3,
-      "initialize_sdk":"",
-      "initialize_sdk_backup_ads":"",
+      "initialize_sdk":"1234567",
+      "initialize_sdk_backup_ads":"1234567",
       "high_paying_keyword_1": "",
       "high_paying_keyword_2": "",
       "high_paying_keyword_3": "",
