--- a/SnowcrossExtremeActionWallpaper.json
+++ b/SnowcrossExtremeActionWallpaper.json
@@ -16,7 +16,7 @@
 //  Mode APPLOVIN    Applovin  backup Unity Backup Startapp
 //  Iklan native hanya bisa admob fan appodel
 
-"pengaturan_iklan_banner" : "APPLOVIN",
+"pengaturan_iklan_banner" : "ADMOB",
 "pengaturan_iklan_inter" : "ADMOB",
 "pengaturan_iklan_native" : "ADMOB",
 
@@ -32,7 +32,7 @@
 
 "startapp" : "206954344",
 
-"admob_banner" : "ca-app-pub-8703788307276427/5867417114x",
+"admob_banner" : "ca-app-pub-8703788307276427/5867417114",
 "admob_inter" : "ca-app-pub-8703788307276427/6866294700",
 "admob_native" : "ca-app-pub-8703788307276427/2368646494",
 
@@ -54,7 +54,7 @@
 "unity_id" : 1234567,
 "unity_test" : false,
 
-"applovin_banner_id" : "b297896a8e6146a2",
+"applovin_banner_id" : "b297896a8e6146a2x",
 "applovin_inters_id" : "88c2def53908ebecx",
 
 "Button_Rating" : "Rate App",
