--- a/StunningSnowmobileRaceWallpaper.json
+++ b/StunningSnowmobileRaceWallpaper.json
@@ -16,7 +16,7 @@
 //  Mode APPLOVIN    Applovin  backup Unity Backup Startapp
 //  Iklan native hanya bisa admob fan appodel
 
-"pengaturan_iklan_banner" : "APPLOVIN",
+"pengaturan_iklan_banner" : "ADMOB",
 "pengaturan_iklan_inter" : "ADMOB",
 "pengaturan_iklan_native" : "ADMOB",
 
@@ -32,7 +32,7 @@
 
 "startapp" : "206874208",
 
-"admob_banner" : "ca-app-pub-8703788307276427/3957060337x",
+"admob_banner" : "ca-app-pub-8703788307276427/3957060337",
 "admob_inter" : "ca-app-pub-8703788307276427/8798323474",
 "admob_native" : "ca-app-pub-8703788307276427/7237829796",
 
@@ -54,7 +54,7 @@
 "unity_id" : 1234567,
 "unity_test" : false,
 
-"applovin_banner_id" : "c9979f8c590e71a0",
+"applovin_banner_id" : "c9979f8c590e71a0x",
 "applovin_inters_id" : "d0b56c44410b00c8x",
 
 "Button_Rating" : "Rate App",
