--- a/BeautifulSnowfallWallpapers-RYSAV6.4.json
+++ b/BeautifulSnowfallWallpapers-RYSAV6.4.json
@@ -3,11 +3,11 @@
     {
       "select_main_ads": "ADMOB",
       "select_backup_ads":"APPLOVIN-M",
-      "main_ads_banner": "ca-app-pub-8703788307276427/6871864256x",
+      "main_ads_banner": "ca-app-pub-8703788307276427/6871864256",
       "main_ads_intertitial":"ca-app-pub-8703788307276427/5290672357",
       "main_native_ads_Admob_or_applovin":"ca-app-pub-8703788307276427/3706127944",
       "backup_native_ads_Admob_or_applovin":"adeb9c5745bf888fx",
-      "backup_ads_banner":"9d5fc01aaa9fad7d",
+      "backup_ads_banner":"9d5fc01aaa9fad7dx",
       "backup_ads_intertitial":"d5ac8588e8348d12x",
       "interval_intertitial": 3,
       "initialize_sdk":"12345678",
