--- a/SnowfallHDWallpapers-RYSAV6.4.json
+++ b/SnowfallHDWallpapers-RYSAV6.4.json
@@ -3,11 +3,11 @@
     {
       "select_main_ads": "ADMOB",
       "select_backup_ads":"APPLOVIN-M",
-      "main_ads_banner": "ca-app-pub-8703788307276427/6495942816x",
+      "main_ads_banner": "ca-app-pub-8703788307276427/6495942816",
       "main_ads_intertitial":"ca-app-pub-8703788307276427/5182861145",
       "main_native_ads_Admob_or_applovin":"ca-app-pub-8703788307276427/2406005639",
       "backup_native_ads_Admob_or_applovin":"4e2b9c2a488fc537x",
-      "backup_ads_banner":"6659c702c71ce02b",
+      "backup_ads_banner":"6659c702c71ce02bx",
       "backup_ads_intertitial":"4e2b9c2a488fc537x",
       "interval_intertitial": 3,
       "initialize_sdk":"12345678",
